Apply warning fixes